--- a/22-July-2019.ipynb
+++ b/22-July-2019.ipynb
@@ -503,10 +503,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "3 4 7 10\n",
+      "4 3 10 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# model 2\n",
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    n = int(input())\n",
+    "    print(\" \".join(map(str, sorted(map(int,input().split()), key=lambda x: bin(x)[2:].count(\"1\")))))"
+   ]
   },
   {
    "cell_type": "code",
