--- a/22-July-2019.ipynb
+++ b/22-July-2019.ipynb
@@ -455,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -524,6 +526,13 @@
     "    n = int(input())\n",
     "    print(\" \".join(map(str, sorted(map(int,input().split()), key=lambda x: bin(x)[2:].count(\"1\")))))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
