--- a/24-July-2019.ipynb
+++ b/24-July-2019.ipynb
@@ -175,10 +175,85 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q5 . ques 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "  *\n",
+      " ***\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cases in range(int(input())):\n",
+    "    value = int(input())\n",
+    "    for p in range(1,(2*value),2):\n",
+    "        print(\" \"*(value-1)+\"*\"*p)\n",
+    "        value-=1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q6 . Digit Problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4483 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x,k = map(str,input().split())\n",
+    "print('9'*int(k)+x[int(k):])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9983'"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
